--- a/Global Solution - Front/home.html
+++ b/Global Solution - Front/home.html
@@ -83,7 +83,7 @@
             </ul>
         </section>
         <section id="app" class="app">
-            <h2>Baixe Nosso App</h2><br>
+            <h2>Baixe Nosso App</h2>
             <div class="imagens3">
                 <img src="assets/logo google.jpg" alt="Google Play"/>
                 <img src="assets/logo apple.jpg" alt="App Store"/>
