--- a/Global Solution - Front/home.html
+++ b/Global Solution - Front/home.html
@@ -53,25 +53,38 @@
         </section>
         <section id="recursos" class="recursos">
             <h2>Recursos Principais</h2><br>
-            <ol>
-                <li id="rastreamento"><strong>Rastreamento de Uso de Plástico:</strong></li>
-                <p>O aplicativo permite que os usuários rastreiem seu uso de plástico ao longo do tempo, registrando suas compras e hábitos de consumo.</p><br>
-
-                <li id="desafios"><strong>Desafios e Recompensas:</strong></li>
-                <p>EcoPlastic oferece desafios semanais ou mensais para os usuários reduzirem seu uso de plástico. Aqueles que completarem os desafios ganham pontos que podem ser trocados por recompensas, como descontos em produtos sustentáveis ou doações para organizações que lutam contra a poluição plástica.</p><br>
-
-                <li id="dicas"><strong>Dicas e Alternativas Sustentáveis:</strong></li>
-                <p>O aplicativo fornece dicas práticas e alternativas sustentáveis para substituir produtos de plástico no dia a dia. Isso inclui sugestões de produtos reutilizáveis, embalagens biodegradáveis e opções de compra a granel.</p><br>
-
-                <li id="comunidade"><strong>Comunidade e Educação:</strong></li>
-                <p>EcoPlastic cria uma comunidade de usuários que compartilham dicas, histórias de sucesso e informações sobre como reduzir o uso de plástico. Além disso, oferece recursos educacionais sobre o impacto do plástico nos oceanos e o meio ambiente em geral.</p><br>
-
-                <li id="reciclagem"><strong>Localização de Pontos de Reciclagem:</strong></li>
-                <p>O aplicativo inclui um mapa que mostra a localização de pontos de reciclagem próximos, facilitando o descarte adequado de plástico e incentivando a reciclagem.</p><br>
-
-                <li id="feedback"><strong>Feedback Ambiental:</strong></li>
-                <p>Os usuários podem fornecer feedback sobre empresas e produtos com base em seu uso de plástico. Isso ajuda a aumentar a conscientização sobre marcas responsáveis e pressiona outras a adotar práticas mais sustentáveis.</p>
-            </ol>
+            <div class="accordion">
+                <button class="accordion-button" id="rastreamento">Rastreamento de Uso de Plástico</button>
+                <div class="accordion-content">
+                    <div class="accordion-item">
+                        <p>O aplicativo permite que os usuários rastreiem seu uso de plástico ao longo do tempo, registrando suas compras e hábitos de consumo.</p>
+                        <img src="assets/rastreamento.png" alt="Rastreamento de Uso de Plástico">
+                    </div>
+                </div>
+                <button class="accordion-button" id="desafios">Desafios e Recompensas</button>
+                <div class="accordion-content">
+                    <p>EcoPlastic oferece desafios semanais ou mensais para os usuários reduzirem seu uso de plástico. Aqueles que completarem os desafios ganham pontos que podem ser trocados por recompensas, como descontos em produtos sustentáveis ou doações para organizações que lutam contra a poluição plástica.</p>
+                </div>
+                <button class="accordion-button" id="dicas">Dicas e Alternativas Sustentáveis</button>
+                <div class="accordion-content">
+                    <p>O aplicativo fornece dicas práticas e alternativas sustentáveis para substituir produtos de plástico no dia a dia. Isso inclui sugestões de produtos reutilizáveis, embalagens biodegradáveis e opções de compra a granel.</p>
+                </div>
+                <button class="accordion-button" id="comunidade">Comunidade e Educação</button>
+                <div class="accordion-content">
+                    <p>EcoPlastic cria uma comunidade de usuários que compartilham dicas, histórias de sucesso e informações sobre como reduzir o uso de plástico. Além disso, oferece recursos educacionais sobre o impacto do plástico nos oceanos e o meio ambiente em geral.</p>
+                </div>
+                <button class="accordion-button" id="reciclagem">Localização de Pontos de Reciclagem</button>
+                <div class="accordion-content">
+                    <div class="accordion-item">
+                        <p>O aplicativo inclui um mapa que mostra a localização de pontos de reciclagem próximos, facilitando o descarte adequado de plástico e incentivando a reciclagem.</p>
+                        <img src="assets/pontos.png" alt="Localização de Pontos de Reciclagem">
+                    </div>
+                </div>
+                <button class="accordion-button" id="feedback">Feedback Ambiental</button>
+                <div class="accordion-content">
+                    <p>Os usuários podem fornecer feedback sobre empresas e produtos com base em seu uso de plástico. Isso ajuda a aumentar a conscientização sobre marcas responsáveis e pressiona outras a adotar práticas mais sustentáveis.</p>
+                </div>
+            </div>
         </section>
         <section id="beneficios" class="beneficios">
             <h2>Benefícios</h2><br>
